--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,17 @@
 			<artifactId>kumo-tokenizers</artifactId>
 			<version>1.28</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.json</groupId>
+			<artifactId>javax.json-api</artifactId>
+			<version>1.1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
